--- a/week04/bio/biostyle.css
+++ b/week04/bio/biostyle.css
@@ -1,19 +1,25 @@
 html {
-    background-color: hotpink;
+    background-image: url('background.jpg');
+    background-attachment:fixed;
+    background-size: 100% 100%;
+    
 }
-
+a{
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 button {
     padding: 40px;
     border: solid 10px;
     border-radius: 30px;
-    background-color:violet;
+    background-color:rgb(100, 100, 100);
     margin: 50px;
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
    }
 button:hover {
-    color: rgb(100,0,100);
+    color: white;
     font-size: 30px;
    }
 h1.thePosition{
@@ -21,7 +27,7 @@ h1.thePosition{
     left: 1100px ;
     top: 80px;
     font-family: cursive;
-    color: rebeccapurple;
+    color: black;
 }
 h2.thePosition
 {
@@ -33,7 +39,7 @@ h3.thePosition
 {   
     position:absolute;
     left:700px;
-    top:1100px;
+    top:900px;
 }
 h4.thePosition
 {   
@@ -48,9 +54,7 @@ h5.thePosition
     left:700px;
     top:3000px;
 }
-h5:hover{
-    img src="raygun2.jpg";
-}
+
 
 p.style{
     font-size: 50px;
@@ -60,7 +64,7 @@ p.style{
 }
 div.fixed{
     position: fixed;
-    top: 100px;
+    top: 50px;
     left: 50px
      
 }
